# netfuncs

./: README.md  pyproject.toml
src/netfuncs/: __init__.py  functions.py
